# shoot-em-up

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ParallaxBackground.gd  README.md  airplane.gd  airplane_eagle.tscn  airplane_tunder.tscn  bullet.gd  bullet.tscn  eagle_airplane.tscn  enemy.tscn  enemy_bullet.tscn  enemy_eagle.gd  enemy_eagle.tscn  icon.svg.import  main.gd  main.tscn  player.gd  player.tscn  player_bullet.tscn  project.godot  tunder_airplane.tscn  vcpkg.json
gui-theme/: Blomberg-8MKKZ.otf.import  background.png.import  green.png.import  kenvector_future.ttf.import
images/gameplay/: Avenger.png.import  Bullet.png.import  Desert.png.import  Eagle.png.import  FireRate.png.import  FireSpread.png.import  HealthRefill.png.import  Missile.png.import  MissileRefill.png.import  Raptor.png.import  TitleScreen.png.import
images/menu/: TitleScreen.png.import
includes/: Utility.hpp
includes/Commands/: Command.hpp  CommandQueue.hpp
includes/Components/: Components.hpp  Tags.hpp
includes/Entities/: Aircraft.hpp  Entity.hpp  EntityCategory.hpp  Projectile.hpp
includes/Game/: DataTables.hpp  Game.hpp  Player.hpp  SceneNode.hpp  SpriteNode.hpp  TextNode.hpp  World.hpp
includes/ResourceManager/: ResourceManager.hpp
includes/States/: GamePlayState.hpp  MenuState.hpp  PauseState.hpp  State.hpp  StateStack.hpp  TitleState.hpp
includes/game/: Game.h  GameState.h  MainMenuState.h
music/: MenuTheme.ogg.import  MissionTheme.ogg.import
resources/gui-theme/: green.txt
sounds/gameplay/: AlliedGunfire.wav.import  Button.wav.import  CollectPickup.wav.import  EnemyGunfire.wav.import  Explosion1.wav.import  (+3 more)
src/: CMakeLists.txt  Utility.cpp  main.cpp
src/Entities/: Aircraft.cpp  Entity.cpp  Projectile.cpp
src/Game/: DataTables.cpp  Game.cpp  Player.cpp  SceneNode.cpp  SpriteNode.cpp  TextNode.cpp  World.cpp
src/States/: GamePlayState.cpp  MenuState.cpp  PauseState.cpp  State.cpp  StateStack.cpp  TitleState.cpp
src/game/: Game.cpp  MainMenuState.cpp
textures/: Buttons.png.import  Entities.png.import  Explosion.png.import  FinishLine.png.import  Jungle.png.import  Particle.png.import  TitleScreen.png.import
(+6 files in other folders)
